Update based on feedback